Fixed Dark Mode for all pages

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
 
 :root {
   --background: #f5f5f5;
-  --backgrond-secondary: #e4c1c1;
+  --background-secondary: #e4c1c1;
   --nochange-text: #000;
   --nochange-background: #e0e0e0;
   --text: #333333;
@@ -30,7 +30,7 @@
   --text: #e0e0e0;
   --primary: #4a90e2; /* Updated */
   --secondary: #ffb000; /* Updated */
-  --header-background: #2b2b2b;
+  --header-background: #2d3748;
   --product-background: #1c7c1c; /* Updated */
   --discount-background: #d04545; /* Updated */
   --rating-backgorund: #ffc107; /* Updated */
